--- a/MobileTSS/Base.lproj/Main.storyboard
+++ b/MobileTSS/Base.lproj/Main.storyboard
@@ -356,6 +356,60 @@
             </objects>
             <point key="canvasLocation" x="2674.4000000000001" y="459.22038980509751"/>
         </scene>
+        <!--Loading...-->
+        <scene sceneID="l1m-P0-95j">
+            <objects>
+                <tableViewController storyboardIdentifier="SelectFirmwareTVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="7at-ck-LU4" customClass="SelectFirmwareTableViewController" customModule="MobileTSS" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="sVF-MN-xss">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="item" textLabel="mwu-NU-KjM" detailTextLabel="uxz-S6-wXY" style="IBUITableViewCellStyleSubtitle" id="3cE-6H-Qie">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3cE-6H-Qie" id="jdC-zb-myt">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mwu-NU-KjM">
+                                            <rect key="frame" x="16" y="5" width="33.5" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="uxz-S6-wXY">
+                                            <rect key="frame" x="16" y="25.5" width="44" height="14.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="7at-ck-LU4" id="ftD-Nh-few"/>
+                            <outlet property="delegate" destination="7at-ck-LU4" id="7sY-DE-vVc"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Loading..." id="JZ7-fi-nb0">
+                        <barButtonItem key="leftBarButtonItem" enabled="NO" systemItem="cancel" id="EiQ-PD-MSK">
+                            <connections>
+                                <action selector="cancelButtonTapped:" destination="7at-ck-LU4" id="Asc-og-5jS"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="cancelBarButton" destination="EiQ-PD-MSK" id="CQN-To-wPn"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3zI-NR-nDV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4612" y="460"/>
+        </scene>
         <!--Details-->
         <scene sceneID="yv7-xe-XXq">
             <objects>
@@ -1344,6 +1398,7 @@
                     </refreshControl>
                     <connections>
                         <outlet property="editBarButton" destination="WPD-Yv-KQC" id="NGg-N8-YnX"/>
+                        <segue destination="0zl-6F-Rqa" kind="presentation" identifier="ToSelectFirmware" id="fkB-v4-2iB"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cl3-G8-QAG" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1373,6 +1428,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e1D-eE-0X7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="750" y="460"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9PE-27-PA2">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0zl-6F-Rqa" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lIF-nz-A0a">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="7at-ck-LU4" kind="relationship" relationship="rootViewController" id="ZS6-WP-Twx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZBY-gJ-dyh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3609" y="460"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
